--- a/styles/styles.css
+++ b/styles/styles.css
@@ -9,7 +9,7 @@
 
 }
 
-.section-des{
+.section-des {
     color: rgba(19, 24, 24, 0.70);
     font-size: 1rem;
 }
@@ -143,20 +143,20 @@ nav a {
 
 /* Popular Tours section start */
 
-.Popular-Tours{
+.Popular-Tours {
     display: flex;
     margin: 130px;
     gap: 50px;
 }
 
-.tour-title{
+.tour-title {
     font-size: 2.5rem;
     font-weight: 800;
     color: #131318;
     margin-top: 10px;
 }
 
-.btn-read-more{
+.btn-read-more {
     padding: 15px 30px;
     color: #FFF;
     background-color: #FF5400;
@@ -165,7 +165,9 @@ nav a {
     font-size: 1.25rem;
     font-weight: 700;
 }
-.tour-content p, .tour-li{
+
+.tour-content p,
+.tour-li {
     margin: 20px 0;
     line-height: 30px;
 }
@@ -176,233 +178,278 @@ nav a {
 
 /* destination section start */
 
-.destination{
-   /* margin: 135px;
+.destination {
+    /* margin: 135px;
    gap: 24px; */
-   max-width: 1200px;
-   margin: 0 auto;
-   text-align: center;
+    max-width: 1200px;
+    margin: 0 auto;
+    text-align: center;
 }
-.destination-container{
+
+.destination-container {
     margin: 50px;
 }
 
-.destination-title{
+.destination-title {
     font-size: 2.50rem;
 }
 
-.destination-img-container{
+.destination-img-container {
     /* padding: 24px; */
-   
-
-    }
-    .destination-img img{
-        margin: 10px;
-        height: 100%;
-        
-    }
-
-    /* why choose us start */
-
-    .why-choose-us{
-        text-align: center;
-        margin: 135px;
-    }
-    .content-title{
-        font-size: 2.5rem;
-        font-weight: 800;
-    }
-
-    .choose-cotent{
-        margin: 50px;
-    }
-
-    .choose-img-container{
-        display: grid;
-        grid-template-columns: repeat(2, 1fr) ;
-        /* grid-template-rows: 1fr auto; */
-        gap: 20px;
-        
-    }
-    .choose-img{
-        border-radius: 15px;
-        text-align: left;
-        padding: 30px;
-    }
-
-    .box-1 {
-        /* border: 2px solid; */
-        background-color: rgba(251, 181, 99, 0.10);
-        border: 2px solid rgba(251, 181, 99, 0.50);
-    }
-    .box-2 {
-        background-color: rgba(41, 206, 246, 0.10);
-        border: 2px solid rgba(41, 206, 246, 0.50);
-    }
-    .box-3 {
-        background-color: rgba(233, 68, 68, 0.10);
-        border: 2px solid rgba(233, 68, 68, 0.50);
-        position: relative;
-        left:50%;
-    }
-
-    .choose-img img{
-        width: 10%;
-    }
 
 
-    /* Deals and Discount section start */
+}
 
-    .deals-container{
-        max-width: 1170px;
-        margin: 0 auto;
-        text-align: center;
-    }
+.destination-img img {
+    margin: 10px;
+    height: 100%;
 
-    .container-1{
-        background-image: url(../assets/Images/Group\ 39.png);
-        background-repeat: no-repeat;
-        /* border-radius: 14px; */
-    }
+}
 
-    .container-2{
-        background-image: url(../assets/Images/Group\ 40.png);
-        background-repeat: no-repeat;
-        /* border-radius: 14px; */
-    }
-    .container-3{
-        background-image: url(../assets/Images/Group\ 39.png);
-        background-repeat: no-repeat;
-        /* border-radius: 14px; */
-    }
+/* why choose us start */
 
-    .discount{
-        width: 45%;
-        background-color: rgba(255, 255, 255, 0.80);
-        border-radius: 15px;
-        padding: 40px;
+.why-choose-us {
+    text-align: center;
+    margin: 135px;
+}
 
-        /* margin: 40px; */
-        text-align: left;
-        border: 2px solid #FFF;
-    }
+.content-title {
+    font-size: 2.5rem;
+    font-weight: 800;
+}
 
-    .discount-container{
-        padding: 66px 0 66px 66px;
-        /* margin: 20px; */
-        margin-bottom: 20px;
-       
-    }
+.choose-cotent {
+    margin: 50px;
+}
 
-    .deals> h1{
-        font-size: 02.5rem;
-        font-weight: 800;
-    }
+.choose-img-container {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    /* grid-template-rows: 1fr auto; */
+    gap: 20px;
 
-    .deals> p{
-        margin: 40px;
-    }
+}
 
-  
+.choose-img {
+    border-radius: 15px;
+    text-align: left;
+    padding: 30px;
+}
 
-    .discount-title{
-        font-size: 1.5rem;
-        font-weight: 800;
-    }
+.box-1 {
+    /* border: 2px solid; */
+    background-color: rgba(251, 181, 99, 0.10);
+    border: 2px solid rgba(251, 181, 99, 0.50);
+}
 
-    .price{
-        margin: 20px 0;
-        font-weight: 800;
-        font-size: 1.25rem;
-        color: #FF5400;
+.box-2 {
+    background-color: rgba(41, 206, 246, 0.10);
+    border: 2px solid rgba(41, 206, 246, 0.50);
+}
 
-    }
+.box-3 {
+    background-color: rgba(233, 68, 68, 0.10);
+    border: 2px solid rgba(233, 68, 68, 0.50);
+    position: relative;
+    left: 50%;
+}
 
-    .deals-1{
-        position: relative;
-        left: 42%;
-    }
+.choose-img img {
+    width: 10%;
+}
 
 
-    /* Newslatter Section start */
+/* Deals and Discount section start */
 
-    .Newsletter-container{
-        display: flex;
-        gap: 20px;
-        margin: 50px auto;
-        max-width: 1170px;
-       
-    }
+.deals-container {
+    max-width: 1170px;
+    margin: 0 auto;
+    text-align: center;
+}
 
-    .Newsletter-content{
-        padding: 30px 30px 55px 30px ;
-        border: 2px solid #FF5400;
-        border-radius: 15px;
-        height: 100%;
-    }
+.container-1 {
+    background-image: url(../assets/Images/Group\ 39.png);
+    background-repeat: no-repeat;
+    /* border-radius: 14px; */
+}
 
-    .Newsletter-content> .form{
-        display: flex;
-        flex-direction: column;
-        gap: 20px;
-        margin: 20px 0;
-    }
+.container-2 {
+    background-image: url(../assets/Images/Group\ 40.png);
+    background-repeat: no-repeat;
+    /* border-radius: 14px; */
+}
 
-    .form input{
-        padding: 20px;
-        border-radius: 10px;
-        border: 0;
-        background-color: rgba(19, 19, 24, 0.05);
-        color: #716c69;
-    }
+.container-3 {
+    background-image: url(../assets/Images/Group\ 39.png);
+    background-repeat: no-repeat;
+    /* border-radius: 14px; */
+}
 
-    .form input::placeholder{
-        font-weight: 600;
-    }
+.discount {
+    width: 45%;
+    background-color: rgba(255, 255, 255, 0.80);
+    border-radius: 15px;
+    padding: 40px;
 
-    .btn-newslater{
-        background-color: #FF5400;
-        color: #FFF;
-        width: 100%;
-        border: 0;
-        border-radius: 10px;
-        padding: 20px;
-        font-weight: 800;
-    }
+    /* margin: 40px; */
+    text-align: left;
+    border: 2px solid #FFF;
+}
 
-    .offer{
-        background-color: #FF5400;
-        color: #FFF;
-        text-align: center;
-        padding: 15px 25px ;
-        width: 40%;
-        border-radius: 15px;
-        position: relative;
-        left: 52%;
-        bottom: 35%;
-        transform: rotate(-30deg);
-    }
+.discount-container {
+    padding: 66px 0 66px 66px;
+    /* margin: 20px; */
+    margin-bottom: 20px;
 
-    .offer-title{
-        font-size: 1.5rem;
-        margin: 0;
-    }
+}
 
-    .offer> h1{
-        font-size: 2rem;
-        font-weight: 800;
-        margin: 10px 0 0 0;
-    }
+.deals>h1 {
+    font-size: 02.5rem;
+    font-weight: 800;
+}
+
+.deals>p {
+    margin: 40px;
+}
+
+
+
+.discount-title {
+    font-size: 1.5rem;
+    font-weight: 800;
+}
+
+.price {
+    margin: 20px 0;
+    font-weight: 800;
+    font-size: 1.25rem;
+    color: #FF5400;
+
+}
+
+.deals-1 {
+    position: relative;
+    left: 42%;
+}
+
+
+/* Newslatter Section start */
+
+.Newsletter-container {
+    display: flex;
+    gap: 20px;
+    margin: 50px auto;
+    max-width: 1170px;
+
+}
+
+.Newsletter-content {
+    padding: 30px 30px 55px 30px;
+    border: 2px solid #FF5400;
+    border-radius: 15px;
+    height: 100%;
+}
+
+.Newsletter-content>.form {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    margin: 20px 0;
+}
+
+.form input {
+    padding: 20px;
+    border-radius: 10px;
+    border: 0;
+    background-color: rgba(19, 19, 24, 0.05);
+    color: #716c69;
+}
+
+.form input::placeholder {
+    font-weight: 600;
+}
+
+.btn-newslater {
+    background-color: #FF5400;
+    color: #FFF;
+    width: 100%;
+    border: 0;
+    border-radius: 10px;
+    padding: 20px;
+    font-weight: 800;
+}
+
+.offer {
+    background-color: #FF5400;
+    color: #FFF;
+    text-align: center;
+    padding: 15px 25px;
+    width: 40%;
+    border-radius: 15px;
+    position: relative;
+    left: 52%;
+    bottom: 35%;
+    transform: rotate(-30deg);
+}
+
+.offer-title {
+    font-size: 1.5rem;
+    margin: 0;
+}
+
+.offer>h1 {
+    font-size: 2rem;
+    font-weight: 800;
+    margin: 10px 0 0 0;
+}
+
+/* footer section start */
+
+footer {
+    background-color: rgba(19, 19, 24, 0.05);
+}
+
+.footer {
+    text-align: center;
+    margin: 10px auto;
+    padding: 70px;
+    max-width: 1100px;
+}
+
+.footer-title {
+    /* text-align: center; */
+    display: flex;
+    font-size: 2.4rem;
+    font-weight: 800;
+    justify-content: center;
+    align-items: center;
+}
+
+.footer-title img {
+    /* width: 100%; */
+    width: 55px;
+    height: 50px;
+}
+
+.footer-img img{
+    padding-right: 20px;
+}
+
+.section-des-second {
+    padding: 50px 0 0 0;
+}
 
 
 
 /* responsive for small device */
 
 @media screen and (max-width: 576px) {
-    *{
+    * {
         margin: 0;
     }
-    nav , .Popular-Tours{
+
+    nav,
+    .Popular-Tours {
         flex-direction: column;
         margin: 20px;
         align-items: center;
@@ -457,139 +504,159 @@ nav a {
         width: 100%;
     }
 
-    .Popular-Tours img{
-        
+    .Popular-Tours img {
+
         width: 100%;
 
     }
 
-    .destination{
+    .destination {
         margin: 20px;
     }
 
-    .destination-container{
+    .destination-container {
         margin: 0;
     }
 
-    .destination-title{
+    .destination-title {
         font-size: 1.25rem;
         margin: 20px 0;
         font-weight: 800;
     }
 
-    .destination-img img{
+    .destination-img img {
         width: 100%;
         height: 175px;
         margin: 0;
         margin-top: 20px;
     }
-    .why-choose-us{
+
+    .why-choose-us {
         /* text-align: center; */
         margin: 20px;
     }
 
-    .choose-cotent{
+    .choose-cotent {
         margin: 0px;
-        
+
     }
 
-    .content-title{
+    .content-title {
         font-size: 1.25rem;
         margin: 20px 0;
 
     }
 
-    .choose-cotent> p{
+    .choose-cotent>p {
         margin: 20px 0;
     }
 
-    .choose-img-container{
+    .choose-img-container {
         grid-template-columns: 1fr;
     }
 
-    .box-3{
+    .box-3 {
         position: static;
     }
 
-    .container-1{
+    .container-1 {
         background-position: center;
         /* width: 100%; */
         /* margin: 20px; */
         padding: 0;
-       
+
     }
-    .container-2{
+
+    .container-2 {
         background-position: center;
         padding: 0;
     }
 
-    .deals-container{
+    .deals-container {
         margin: 20px;
-        
+
     }
 
-    .discount-container{
+    .discount-container {
         border-radius: 20px;
         padding: 160px 20px 20px 20px;
     }
 
-    .discount{
+    .discount {
         padding: 10px;
     }
 
-    .deals-1{
+    .deals-1 {
         position: static;
         /* align-items: center; */
         width: 85%;
         padding: 20px;
-       
+
     }
 
-    .discount-title{
+    .discount-title {
         font-size: 1.25rem;
         margin: 10px 0;
     }
 
-    .btn-read-more{
+    .btn-read-more {
         font-size: 1rem;
     }
 
-    .price{
+    .price {
         font-size: 1rem;
         margin: 10px 0;
     }
 
-    .deals> h1{
+    .deals>h1 {
         font-size: 1.25rem;
-        
+
     }
 
-    .deals> p{
+    .deals>p {
         /* padding: 10px; */
         margin: 20px;
     }
 
-    .Newsletter-container{
+    .Newsletter-container {
         flex-direction: column;
         margin: 20px;
     }
 
-    .Newsletter-img img{
+    .Newsletter-img img {
         width: 100%;
     }
-    .offer{
-        position: static;
-        transform: none;
-        width: 85%;
+
+    .offer {
+        /* position: static; */
+        /* transform: none; */
+
+        width: 40%;
+        left: 38%;
+        bottom: 140px;
+
     }
 
-    .offe> P{
+    .offer .offer-title {
         font-size: 1rem;
     }
-    .offer> h1{
-        font-size: 1.25rem;
+
+    .offer>h1 {
+        font-size: 1rem;
     }
 
+    .footer{
+        padding: 50px 0;
+        margin: 20px;
+    }
+
+    .description{
+        margin: 20px 0;
+    }
+
+    .footer-img{
+        margin: 10px 0;
+    }
 
 
 }
@@ -597,57 +664,64 @@ nav a {
 /* Responsive for medium device */
 
 @media screen and (min-width: 576px) and (max-width: 992px) {
-    *{
+    * {
         margin: 0;
     }
-    nav{
+
+    nav {
         margin: 50px;
 
     }
-    nav> ul{
+
+    nav>ul {
         gap: 10px;
         font-size: 0.8rem;
-        padding: 0 ;
+        padding: 0;
     }
-    .nav-title{
+
+    .nav-title {
         font-size: 1.25rem;
     }
-    nav li a{
+
+    nav li a {
         font-size: 1rem;
         /* gap: 10px; */
     }
 
-    nav .home{
+    nav .home {
         font-size: 1rem;
     }
 
-    
 
-    .banner-container{
-         padding: 0;
+
+    .banner-container {
+        padding: 0;
     }
-    .banner{
+
+    .banner {
         margin: 50px;
         /* box-shadow: inset 0 100px 50px 0 rgba(0, 0, 0, 0.6); */
         padding: 20px;
         background-position: center;
     }
 
-    .banner-title{
+    .banner-title {
         margin-top: 0;
         /* margin-bottom: 10px; */
         /* padding-bottom: 10px; */
         font-size: 2.4rem;
     }
 
-    .banner-des{
+    .banner-des {
         padding-bottom: 20px;
         padding-top: 20px;
     }
-    .banner-form{
+
+    .banner-form {
         flex-direction: column;
         gap: 10px;
     }
+
     .banner-form .inputs {
         width: 94%;
         padding-left: 20px;
@@ -666,140 +740,155 @@ nav a {
     .btn-one {
         width: 100%;
     }
-    .Popular-Tours{
+
+    .Popular-Tours {
         flex-direction: column;
         margin: 50px;
     }
-    .Popular-Tours img{
-        
+
+    .Popular-Tours img {
+
         width: 100%;
 
     }
 
-    
-    .destination{
+
+    .destination {
         margin: 50px;
     }
 
-    .destination-container{
+    .destination-container {
         margin: 0;
     }
 
-    .destination-title{
+    .destination-title {
         font-size: 2.25rem;
         margin: 20px 0;
-        
+
     }
 
-    .destination-img img{
+    .destination-img img {
         width: 100%;
         /* height: 368px; */
         margin: 0;
         margin-top: 20px;
     }
 
-    .why-choose-us{
+    .why-choose-us {
         margin: 50px;
     }
 
-    .content-title{
+    .content-title {
         font-size: 2.25rem;
     }
 
-    .choose-cotent> p{
+    .choose-cotent>p {
         margin: 50px 0;
     }
 
-    .choose-img-container{
+    .choose-img-container {
         grid-template-columns: 1fr;
     }
 
-    .box-3{
+    .box-3 {
         position: static;
     }
 
-    
-    .container-1{
+
+    .container-1 {
         background-position: center;
         /* width: 100%; */
         /* margin: 20px; */
         padding: 0;
-       
+
     }
-    .container-2{
+
+    .container-2 {
         background-position: center;
         padding: 0;
     }
 
-    .deals-container{
+    .deals-container {
         margin: 50px;
-        
+
     }
 
-    .discount-container{
+    .discount-container {
         border-radius: 20px;
         padding: 160px 20px 20px 20px;
     }
-/* 
+
+    /* 
     .discount{
         padding: 10px;
     } */
 
-    .deals-1{
+    .deals-1 {
         position: static;
         /* align-items: center; */
         width: 94%;
         padding: 20px;
-       
+
     }
 
-    .discount-title{
+    .discount-title {
         font-size: 1.25rem;
         margin: 10px 0;
     }
 
-    .btn-read-more{
+    .btn-read-more {
         font-size: 1rem;
     }
 
-    .price{
+    .price {
         font-size: 1rem;
         margin: 10px 0;
     }
 
-    .deals> h1{
+    .deals>h1 {
         font-size: 2.25rem;
-        
+
     }
 
-    .deals> p{
+    .deals>p {
         /* padding: 10px; */
         margin: 50px;
     }
 
-    
-    .Newsletter-container{
+
+    .Newsletter-container {
         flex-direction: column;
         margin: 50px;
     }
 
-    .Newsletter-img img{
+    .Newsletter-img img {
         width: 100%;
     }
-    .offer{
+
+    .offer {
         position: relative;
         left: 47%;
         bottom: 187px;
-   
-    
-        
+
+
+
     }
-    .offer > P{
+
+    .offer>P {
         font-size: 1rem;
     }
-    .offer> h1{
+
+    .offer>h1 {
         font-size: 1.25rem;
     }
 
-}
+    .description{
+        margin: 20px 0;
+    }
 
+    .footer-img{
+        margin: 10px 0;
+    }
+
+
+}
